--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,13 @@ Package: ggphylogeo
 Type: Package
 Title: ggplot2 Tools for Continuous Phylogeography
 Version: 0.0.1
-Authors@R: person("Your", "Name", email = "your@email", role = c("aut", "cre"))
-Description: Visualisation tools for BEAST-style continuous phylogeographic
+Authors@R: person("Joon", "Klaps",email = "joon.klaps@example.com", role = c("aut", "cre"))
+Author: Joon Klaps [aut, cre]
+Maintainer: Joon Klaps <joon.klaps@example.com>
+Description: Visualisation tools for BEAST continuous phylogeographic
     analyses using ggplot2.
-License: MIT + file LICENSE
+License: MIT
 Encoding: UTF-8
-LazyData: true
 Imports:
     ggplot2,
     treeio,
@@ -16,6 +17,8 @@ Imports:
 Suggests:
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown
+    rmarkdown,
+    maps
+VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
