--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,13 @@
 export(autoplot.treedata)
 export(build_branches)
 export(build_hpd)
+export(build_nodes)
 export(build_phylogeo)
 export(geom_phylo_branches)
 export(geom_phylo_hpd)
 export(geom_phylo_nodes)
+export(ggplotly_phylogeo)
+export(run_phylogeo_app)
 importFrom(ape,as.phylo)
 importFrom(treeio,read.beast)
 importFrom(utils,capture.output)
