--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,17 @@ Description: Visualization tools for BEAST continuous phylogeographic
     an interactive Shiny application for exploring phylogeographic data.
 License: MIT + file LICENSE
 Encoding: UTF-8
+LazyData: true
+Depends:
+    R (>= 3.5.0)
 Imports:
     ggplot2 (>= 3.4.0),
     treeio,
     ape,
     viridisLite,
-    grid
+    grid,
+    smoothr,
+    sf,
 Suggests:
     testthat (>= 3.0.0),
     knitr,
@@ -27,7 +32,11 @@ Suggests:
     glue,
     gifski,
     magick,
-    scales
+    scales,
+    rnaturalearthdata,
+    rnaturalearth,
+    pak,
+    geojsonnio,
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
