--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_dispersion_legend)
 export(autoplot.treedata)
+S3method(autoplot, treedata)
 export(build_branches)
 export(build_hpd)
 export(build_nodes)
@@ -18,3 +19,4 @@ importFrom(treeio,"%>%")
 importFrom(treeio,read.beast)
 importFrom(utils,capture.output)
 importFrom(viridisLite,viridis)
+importFrom(ggplot2,autoplot)
