update version & refactor run_..._app to ..._app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(add_dispersion_legend)
 export(autoplot.treedata)
-S3method(autoplot, treedata)
 export(build_branches)
 export(build_hpd)
 export(build_nodes)
@@ -12,11 +11,11 @@ export(geom_phylo_hpd)
 export(geom_phylo_nodes)
 export(ggplotly_phylogeo)
 export(guides_phylogeo)
-export(run_phylogeo_app)
+export(phylogeo_app)
 export(theme_phylogeo)
 importFrom(ape,as.phylo)
 importFrom(treeio,"%>%")
 importFrom(treeio,read.beast)
 importFrom(utils,capture.output)
 importFrom(viridisLite,viridis)
-importFrom(ggplot2,autoplot)
+importFrom("utils", "data")
